# graphics-demo

./: CMakeLists.txt  README.md
Shaders/: fragment.frag
Source/: main.c
Source/Util/: Shader.c  Shader.h
